--- a/show-service/Dockerfile
+++ b/show-service/Dockerfile
@@ -1,5 +1,5 @@
 FROM eclipse-temurin:21-jdk-alpine
 WORKDIR /app
-COPY target/movie-service-0.0.1-SNAPSHOT.jar app.jar
-EXPOSE 8081
+COPY target/show-service-0.0.1-SNAPSHOT.jar app.jar
+EXPOSE 8082
 ENTRYPOINT ["java","-jar","app.jar"]
