--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>movie-service</module>
         <module>show-service</module>
         <module>reservation-service</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
